--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 'GitHub User Guide for MCTs'
+﻿title: 'MCT 向け GitHub ユーザーガイド'
 remote_theme: MicrosoftLearning/Jekyll-Theme
 exclude:
   - .github/
