Copy Files From Source Repo (2025-08-15 00:13)

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-﻿title: 'MCT 向け GitHub ユーザーガイド'
+title: 'GitHub User Guide for MCTs'
 remote_theme: MicrosoftLearning/Jekyll-Theme
 exclude:
   - .github/
